/*
** EPITECH PROJECT, 2026
** help
** File description:
** Help
*/

#pragma once

#include <iostream>

class Help {
    public:
        static int printHelp();
};
